--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "author": "KrzysztofZawisla <zawislakrzysztof.zk@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
+    "jest": "^29.3.1",
     "query-string": "^8.1.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
