Added setup under the tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
   "compilerOptions": {
     "incremental": true,
     "target": "esnext",
-    "lib": ["esnext", "dom", "dom.iterable"],
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable"
+    ],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -38,16 +42,20 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~api/*": ["*"],
+      "~api/*": [
+        "*"
+      ]
     },
     "plugins": [{
       "transform": "typescript-transform-paths"
     }]
   },
-  "include": ["."],
+  "include": [
+    "."
+  ],
   "exclude": [
     "node_modules",
     "coverage",
-    "destination",
+    "destination"
   ]
 }
