--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "repository": "https://github.com/KrzysztofZawisla/hejtoClient",
   "author": "KrzysztofZawisla <zawislakrzysztof.zk@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "cross-env TS_NODE_PROJECT=tsconfig.node.json ts-node ./source/scripts/runner/commands/runTests/runTests.ts"
+  },
   "dependencies": {
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
+    "cross-env": "^7.0.3",
     "jest": "^29.3.1",
+    "jest-extended": "^3.2.3",
     "query-string": "^8.1.0",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.4",
+    "typescript-transform-paths": "^3.4.6",
+    "zx": "4.2.0"
   }
 }
