--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "cross-env": "^7.0.3",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
     "jest-extended": "^3.2.3",
+    "prettier": "^2.8.3",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "query-string": "^8.1.0",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
