--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "author": "KrzysztofZawisla <zawislakrzysztof.zk@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "cross-env TS_NODE_PROJECT=tsconfig.node.json ts-node ./source/scripts/runner/commands/runTests/runTests.ts"
+    "test": "cross-env TS_NODE_PROJECT=tsconfig.node.json ts-node ./source/scripts/runner/commands/runTests/runTests.ts",
+    "build": "cross-env TS_NODE_PROJECT=tsconfig.node.json ts-node ./source/scripts/runner/commands/build/build.ts"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
+    "@types/unused-webpack-plugin": "^2.4.2",
+    "babel-loader": "^9.1.2",
+    "cache-loader": "^4.1.0",
+    "core-js": "^3.27.2",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -19,11 +26,17 @@
     "prettier": "^2.8.3",
     "prettier-plugin-organize-imports": "^3.2.2",
     "query-string": "^8.1.0",
+    "rimraf": "^4.1.1",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4",
     "typescript-transform-paths": "^3.4.6",
+    "unused-webpack-plugin": "^2.4.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
     "zx": "4.2.0"
   }
 }
