--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@stavalfi/babel-plugin-module-resolver-loader": "^1.4.0",
+    "@types/glob": "^8.0.1",
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "@types/unused-webpack-plugin": "^2.4.2",
@@ -21,6 +23,8 @@
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "file-loader": "^6.2.0",
+    "glob": "^8.1.0",
     "jest": "^29.3.1",
     "jest-extended": "^3.2.3",
     "prettier": "^2.8.3",
