--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,10 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "destination",
+    "emitDeclarationOnly": true,
     "baseUrl": ".",
     "paths": {
       "~api/*": [
@@ -48,7 +52,7 @@
     },
     "plugins": [{
       "transform": "typescript-transform-paths"
-    }]
+    }, ]
   },
   "include": [
     "."
